--- a/netflix-gpt/package.json
+++ b/netflix-gpt/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "react-router": "^7.9.5",
     "vite": "^7.2.2"
   }
 }
